Fixed sidebar spacing

--- a/DigitalNoticeBoard/wwwroot/css/site.css
+++ b/DigitalNoticeBoard/wwwroot/css/site.css
@@ -11,7 +11,7 @@ body {
     bottom: 0;
     left: 0;
     z-index: 100; /* Behind the navbar */
-    padding: 48px 0 0; /* Height of navbar */
+    padding: 44px 0 0; /* Height of navbar */
 }
 .sidebar-sticky {
     position: relative;
